# immich-cli-in-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  makefile  openapispec.json
openapi/: Cargo.toml  README.md
openapi/.openapi-generator/: FILES
openapi/docs/: AddAssetsDto.md  AddUsersDto.md  AdminSignupResponseDto.md  AlbumApi.md  AlbumCountResponseDto.md  AlbumResponseDto.md  AllJobStatusResponseDto.md  AssetApi.md  AssetCountByTimeBucket.md  AssetCountByTimeBucketResponseDto.md  AssetCountByUserIdResponseDto.md  AssetFileUploadResponseDto.md  AssetResponseDto.md  AssetTypeEnum.md  AuthenticationApi.md  CheckDuplicateAssetDto.md  CheckDuplicateAssetResponseDto.md  CreateAlbumDto.md  CreateDeviceInfoDto.md  CreateProfileImageResponseDto.md  CreateUserDto.md  CuratedLocationsResponseDto.md  CuratedObjectsResponseDto.md  DeleteAssetDto.md  DeleteAssetResponseDto.md  DeleteAssetStatus.md  DeviceInfoApi.md  DeviceInfoResponseDto.md  DeviceTypeEnum.md  ExifResponseDto.md  GetAssetByTimeBucketDto.md  GetAssetCountByTimeBucketDto.md  JobApi.md  JobCommand.md  JobCommandDto.md  JobCounts.md  JobId.md  JobStatusResponseDto.md  LoginCredentialDto.md  LoginResponseDto.md  (+18 more)
openapi/src/apis/: album_api.rs  asset_api.rs  authentication_api.rs  configuration.rs  device_info_api.rs  job_api.rs  mod.rs  server_info_api.rs  user_api.rs
openapi/src/models/: add_assets_dto.rs  add_users_dto.rs  admin_signup_response_dto.rs  album_count_response_dto.rs  album_response_dto.rs  all_job_status_response_dto.rs  asset_count_by_time_bucket.rs  asset_count_by_time_bucket_response_dto.rs  asset_count_by_user_id_response_dto.rs  asset_response_dto.rs  (+42 more)
src/: immich.rs  main.rs
src/immich/: commands.rs  directory_walker.rs  fs.rs  login.rs  mod.rs  models.rs  ping_server.rs  request.rs
