[package]
name = "rust-immich"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.22", features = ["derive", "color"] }
openapi = { path = "./openapi" }
log = { version = "0.4" }
simplelog = { version = "^0.11.0", features = ["paris"] }
walkdir = { version = "2.3.2" }
colored = "2"