[package]
name = "immich-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
clap = { version = "3.2.22", features = ["derive", "color"] }
log = { version = "0.4" }
simplelog = { version = "^0.11.0", features = ["paris"] }
walkdir = { version = "2.3.2" }
colored = "2"
openapi = { path = "./openapi" }
itertools = "0.10.5"
chrono = "0.4.22"
reqwest = { version = "0.11.12", features = ["stream", "multipart", "json"] }
